Major refactoring of the screens.

--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -75,15 +75,17 @@
     <Compile Include="Common\NotifyObject.cs" />
     <Compile Include="IServiceLocator.cs" />
     <Compile Include="Screens\DelegateCommand.cs" />
-    <Compile Include="Screens\IIdentifiedScreen.cs" />
+    <Compile Include="Screens\INeedsInitialization.cs" />
+    <Compile Include="Screens\InvocationOrder.cs" />
     <Compile Include="Screens\IScreen.cs" />
     <Compile Include="Screens\IScreenFactory.cs" />
+    <Compile Include="Screens\ILifecycleHandler.cs" />
+    <Compile Include="Screens\LifecycleHandlerCollection.cs" />
+    <Compile Include="Screens\LifecycleTreeWalker.cs" />
+    <Compile Include="Screens\ParentLifecycleHandler.cs" />
     <Compile Include="Screens\Screen.cs" />
-    <Compile Include="Screens\ScreenBehavior.cs" />
-    <Compile Include="Screens\ScreenCollection.cs" />
     <Compile Include="Screens\ScreenConductor.cs" />
     <Compile Include="Screens\ScreenFactory.cs" />
-    <Compile Include="Screens\ScreenInitializer.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="ViewModels\Behaviors\05 Collection Behaviors\CollectionFactoryBehavior.cs" />
     <Compile Include="ViewModels\Behaviors\05 Collection Behaviors\CollectionPopulatorBehavior.cs" />
