--- a/trunk/MvvmContrib/MvvmContrib.csproj
+++ b/trunk/MvvmContrib/MvvmContrib.csproj
@@ -88,6 +88,9 @@
       <LastGenOutput>ExceptionTexts.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Finding screens.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
