--- a/trunk/MvvmContribTest/MvvmContribTest.csproj
+++ b/trunk/MvvmContribTest/MvvmContribTest.csproj
@@ -57,6 +57,7 @@
     <Compile Include="AssertHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\ApplicationCommandManagerTest.cs" />
+    <Compile Include="Screens\FindScreenTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MvvmContrib\MvvmContrib.csproj">
