Moved and renamed several files.

--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -87,17 +87,17 @@
     <Compile Include="Screens\ScreenConductor.cs" />
     <Compile Include="Screens\ScreenFactory.cs" />
     <Compile Include="ServiceLocator.cs" />
-    <Compile Include="ViewModels\Behaviors\05 Collection Behaviors\CollectionFactoryBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\05 Collection Behaviors\CollectionPopulatorBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\BehaviorPosition.cs" />
-    <Compile Include="ViewModels\Behaviors\VMCollectionProperty.cs" />
-    <Compile Include="ViewModels\Behaviors\VMPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\VMPropertyBehaviorChain.cs" />
-    <Compile Include="ViewModels\Behaviors\IBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\Dynamic Fields\FieldDefinition.cs" />
-    <Compile Include="ViewModels\Behaviors\Dynamic Fields\FieldDefinitionCollection.cs" />
-    <Compile Include="ViewModels\Behaviors\Dynamic Fields\FieldDefinitionGroup.cs" />
-    <Compile Include="ViewModels\Behaviors\Dynamic Fields\FieldValueHolder.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionFactoryBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionPopulatorBehavior.cs" />
+    <Compile Include="ViewModels\Core\Behaviors\BehaviorPosition.cs" />
+    <Compile Include="ViewModels\Core\VMCollectionProperty.cs" />
+    <Compile Include="ViewModels\Core\Behaviors\VMPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\Behaviors\VMPropertyBehaviorChain.cs" />
+    <Compile Include="ViewModels\Core\Behaviors\IBehavior.cs" />
+    <Compile Include="ViewModels\Core\DynamicFields\FieldDefinition.cs" />
+    <Compile Include="ViewModels\Core\DynamicFields\FieldDefinitionCollection.cs" />
+    <Compile Include="ViewModels\Core\DynamicFields\FieldDefinitionGroup.cs" />
+    <Compile Include="ViewModels\Core\DynamicFields\FieldValueHolder.cs" />
     <Compile Include="Common\IHideObjectMembers.cs" />
     <Compile Include="Common\PropertyPath.cs" />
     <Compile Include="Common\ExpressionService.cs" />
@@ -110,41 +110,41 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\Behaviors\IBehaviorContext.cs" />
+    <Compile Include="ViewModels\Core\Behaviors\IBehaviorContext.cs" />
     <Compile Include="ViewModels\ICanInitializeFrom.cs" />
     <Compile Include="ViewModels\VMBehaviors.cs" />
-    <Compile Include="ViewModels\Behaviors\10 Dispaly Value Behaviors\10 AllowInvalidDisplayValuesBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\10 Dispaly Value Behaviors\11 DisplayValueValidationBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\20 Various Behaviors\21 DisconnectedVMBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\30 Source Behaviors\30 CalculatedPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\BehaviorFactory.cs" />
-    <Compile Include="ViewModels\Behaviors\DynamicFieldGroups.cs" />
-    <Compile Include="ViewModels\Behaviors\30 Source Behaviors\30 InstancePropertyBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\00 Interfaces\IAccessPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\00 Interfaces\IDisconnectedVMBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\00 Interfaces\IHandlePropertyChangedBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\00 Interfaces\IHandlePropertyChangingBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\00 Interfaces\IValidationBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\30 Source Behaviors\30 MappedPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\20 Various Behaviors\22 PropertyChangedBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\10 Dispaly Value Behaviors\12 DisplayValueAccessorBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\20 Various Behaviors\20 ValidationBehavior.cs" />
-    <Compile Include="ViewModels\Behaviors\10 Dispaly Value Behaviors\VMPropertyDescriptor.cs" />
-    <Compile Include="ViewModels\Behaviors\10 Dispaly Value Behaviors\ChangeValueRequest.cs" />
-    <Compile Include="ViewModels\Behaviors\10 Dispaly Value Behaviors\IVMValueConverter.cs" />
-    <Compile Include="ViewModels\Fluent\IVMBehaviorConfigurator.cs" />
-    <Compile Include="ViewModels\Fluent\IVMDescriptorBuilder.cs" />
-    <Compile Include="ViewModels\Fluent\IVMDescriptorConfigurator.cs" />
-    <Compile Include="ViewModels\Fluent\IVMPropertyFactoryProvider.cs" />
-    <Compile Include="ViewModels\Fluent\IVMDependencyConfigurator.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\AllowInvalidDisplayValuesBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\DisplayValueValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\DisconnectedVMBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\CalculatedPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\Behaviors\BehaviorFactory.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\DynamicFieldGroups.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\InstancePropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\IAccessPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\IDisconnectedVMBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\IHandlePropertyChangedBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\IHandlePropertyChangingBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\IValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\MappedPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyChangedBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\DisplayValueAccessorBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\ValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\VMPropertyDescriptor.cs" />
+    <Compile Include="ViewModels\Core\ChangeValueRequest.cs" />
+    <Compile Include="ViewModels\IVMValueConverter.cs" />
+    <Compile Include="ViewModels\Core\Builder\IVMBehaviorConfigurator.cs" />
+    <Compile Include="ViewModels\Core\Builder\IVMDescriptorBuilder.cs" />
+    <Compile Include="ViewModels\Core\Builder\IVMDescriptorConfigurator.cs" />
+    <Compile Include="ViewModels\Core\Builder\IVMPropertyFactoryProvider.cs" />
+    <Compile Include="ViewModels\Core\Builder\IVMDependencyConfigurator.cs" />
     <Compile Include="ViewModels\IVMPropertyFactory.cs" />
-    <Compile Include="ViewModels\Fluent\IVMValidationConfigurator.cs" />
+    <Compile Include="ViewModels\Core\Builder\IVMValidationConfigurator.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="ViewModels\VMCollection.cs" />
     <Compile Include="ViewModels\VMDescriptor.cs" />
     <Compile Include="ViewModels\VMDescriptorBuilder.cs" />
     <Compile Include="ViewModels\VMProperty.cs" />
-    <Compile Include="ViewModels\VMPropertyFactory.cs" />
+    <Compile Include="ViewModels\Core\Builder\VMPropertyFactory.cs" />
     <Compile Include="Views\Binder\BinderBuildStep.cs" />
     <Compile Include="Views\Binder\BinderContext.cs" />
     <Compile Include="Views\Binder\BinderExpression.cs" />
@@ -170,7 +170,13 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="ViewModels\Behaviors\00 Interfaces\" />
+    <Folder Include="ViewModels\Behaviors\05 Collection Behaviors\" />
+    <Folder Include="ViewModels\Behaviors\10 Dispaly Value Behaviors\" />
+    <Folder Include="ViewModels\Behaviors\20 Various Behaviors\" />
+    <Folder Include="ViewModels\Behaviors\30 Source Behaviors\" />
     <Folder Include="ViewModels\Descriptor\" />
+    <Folder Include="ViewModels\Fluent\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
