Renamed ILifecycleHandler to IScreenLifecycle.

--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -79,10 +79,10 @@
     <Compile Include="Screens\InvocationOrder.cs" />
     <Compile Include="Screens\IScreen.cs" />
     <Compile Include="Screens\IScreenFactory.cs" />
-    <Compile Include="Screens\ILifecycleHandler.cs" />
-    <Compile Include="Screens\LifecycleHandlerCollection.cs" />
+    <Compile Include="Screens\IScreenLifecycle.cs" />
+    <Compile Include="Screens\ScreenLifecycleCollection.cs" />
     <Compile Include="Screens\LifecycleTreeWalker.cs" />
-    <Compile Include="Screens\ParentLifecycleHandler.cs" />
+    <Compile Include="Screens\ParentScreenLifecycle.cs" />
     <Compile Include="Screens\Screen.cs" />
     <Compile Include="Screens\ScreenConductor.cs" />
     <Compile Include="Screens\ScreenFactory.cs" />
