--- a/trunk/MvvmContribTest/MvvmContribTest.csproj
+++ b/trunk/MvvmContribTest/MvvmContribTest.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\ApplicationCommandManagerTest.cs" />
     <Compile Include="Screens\FindScreenTest.cs" />
+    <Compile Include="ViewModels\SingleSelectionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MvvmContrib\MvvmContrib.csproj">
