--- a/trunk/MvvmContrib/MvvmContrib.csproj
+++ b/trunk/MvvmContrib/MvvmContrib.csproj
@@ -68,6 +68,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\OkCancelScreen.cs" />
+    <Compile Include="Common\OkCancelVM.cs" />
+    <Compile Include="Common\SaveDiscardScreen.cs" />
+    <Compile Include="Common\SaveDiscardVM.cs" />
+    <Compile Include="Common\IOkCancelHandler.cs" />
+    <Compile Include="Common\ISaveDiscardHandler.cs" />
     <Compile Include="ExceptionTexts.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -86,6 +92,7 @@
     <Compile Include="ViewModels\SingleSelectionPropertyBuilder.cs" />
     <Compile Include="ViewModels\SingleSelectionVM.cs" />
     <Compile Include="Screens\IMessageBoxService.cs" />
+    <Compile Include="Views\SelectionBinderExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mvvm\Mvvm.csproj">
@@ -102,9 +109,7 @@
   <ItemGroup>
     <Content Include="Finding screens.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
