--- a/trunk/MvvmTest/MvvmTest.csproj
+++ b/trunk/MvvmTest/MvvmTest.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ViewModels\IntegrationTests\ChangeNotificationTest.cs" />
     <Compile Include="ViewModels\IntegrationTests\CollectionPropertyTest.cs" />
     <Compile Include="ViewModels\IntegrationTests\ValidationTest.cs" />
+    <Compile Include="ViewModels\TempTests\CollectionPropertyTest.cs" />
     <Compile Include="ViewModels\TestVM.cs" />
     <Compile Include="Common\BehaviorsTest.cs" />
     <Compile Include="Common\ExpressionServiceTest.cs" />
