--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -103,20 +103,23 @@
     <Compile Include="ViewModels\Core\Behaviors\VMBehaviorKey.cs" />
     <Compile Include="ViewModels\Core\Builder\ValidationBuilder.cs" />
     <Compile Include="ViewModels\Core\CollectionModificationController.cs" />
+    <Compile Include="ViewModels\Core\Builder\CollectionValidationBuilder.cs" />
     <Compile Include="ViewModels\Core\IBehaviorConfigurationDictionaryProvider.cs" />
     <Compile Include="ViewModels\Core\IBindableCollection.cs" />
-    <Compile Include="ViewModels\Core\IBindableProperty.cs" />
+    <Compile Include="ViewModels\Core\IVMProperty.cs" />
     <Compile Include="ViewModels\Core\ISupportsValidation.cs" />
     <Compile Include="ViewModels\Core\ItemCreationController.cs" />
     <Compile Include="ViewModels\Core\IValidationBuilder.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionFactoryBehavior.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionPopulatorBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionValidationBehavior.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\DelegateCommandBehavior.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\IMutabilityCheckerBehavior.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\IViewModelFactoryBehavior.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\PropagateVMContextBehavior.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\ViewModelFactoryBehavior.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\ViewModelPropertyInitializerBehavior.cs" />
+    <Compile Include="ViewModels\Core\ValidationEventArgs.cs" />
     <Compile Include="ViewModels\Core\ViewModelExtensibility.cs" />
     <Compile Include="ViewModels\ICreatableItem.cs" />
     <Compile Include="ViewModels\IHasSourceObject.cs" />
